--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>expressioneval</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>expressioneval</name>
-	<description>Expression evaluator API</description>
+	<description>Logical expression evaluator API</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
